EXTRA_DIST = include/*.h \
             include/openframe/*.h \
             etc/opentest.conf \
             libraries/openframe/include/openframe/*.h \
             libraries/openframe/src/*.cpp \
             libraries/openframe/src/Makefile.in \
             modules/*/*.h \
             modules/*/*.cpp \
             modules/*/Makefile.in \
             modules/Makefile.in

SUBDIRS = src test modules
