noinst_PROGRAMS = appserver feedtest counter sockserv memtest loghup complexity streamparser object threadq threadserv
feedtest_SOURCES = feedtest.cpp
feedtest_LDFLAGS = -lopenframe

appserver_SOURCES = appserver.cpp
appserver_LDFLAGS = -lopenframe

streamparser_SOURCES = streamparser.cpp
streamparser_LDFLAGS = -lopenframe

object_SOURCES = object.cpp
object_LDFLAGS = -lopenframe

complexity_SOURCES = complexity.cpp
complexity_LDFLAGS = -lopenframe

threadq_SOURCES = threadq.cpp
threadq_LDFLAGS = -lopenframe

counter_SOURCES = counter.cpp
counter_LDFLAGS = -lopenframe

sockserv_SOURCES = socketserver.cpp
sockserv_LDFLAGS = -lopenframe

memtest_SOURCES = memtest.cpp
memtest_LDFLAGS = -lopenframe

loghup_SOURCES = loghup.cpp
loghup_LDFLAGS = -lopenframe

threadserv_SOURCES = threadserv.cpp
threadserv_LDFLAGS = -lopenframe
