noinst_LTLIBRARIES = libofcommands.la
libofcommands_la_SOURCES = stdinADDMODULE.cpp \
                           stdinBINARY.cpp \
                           stdinBOOKMARKS.cpp \
                           stdinCAT.cpp \
                           stdinDTREE.cpp \
                           stdinHELP.cpp \
                           stdinHISTORY.cpp \
                           stdinQUIT.cpp \
                           stdinRELOADMODULE.cpp \
                           stdinREMOVEMODULE.cpp \
                           stdinSETCONFIG.cpp \
                           stdinSHOWCONFIG.cpp
